# odysseus-dock

./: CMakeLists.txt  resources.qrc
qml/: DockItem.qml  PopupTips.qml  TimeItem.qml  main.qml
src/: applicationmodel.cpp  iconthemeimageprovider.cpp  mainwindow.cpp  mainwindow.h  popuptips.cpp  popuptips.h  processprovider.cpp  processprovider.h  systemappmonitor.cpp  xwindowinterface.cpp
